--- a/src/App.css
+++ b/src/App.css
@@ -19,15 +19,20 @@
 }
 
 @keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
-.donutchart-track{
+.donutchart-track {
   fill: transparent;
   stroke: #DAE2E5;
   stroke-width: 26;
 }
+
 .donutchart-indicator {
   fill: transparent;
   stroke: #009688;
@@ -42,33 +47,32 @@
   display: block;
 }
 
-
-.donutchart-text{
+.donutchart-text {
   font-family: 'Roboto';
   fill: #607580;
 }
-.donutchart-text-val{
-  font-size:22px;
-}
-.donutchart-text-percent{
-  font-size:14px;
-}
-.donutchart-text-label{
-  font-size:9px;
+
+.donutchart-text-val {
+  font-size: 22px;
 }
 
-
-
-body{
-  padding:40px;
-  font-family:'Roboto';
-  text-align:center;
+.donutchart-text-percent {
+  font-size: 14px;
 }
 
-input{
-  padding:8px 10px;
-  border-radius:4px;
-  border:1px solid #ddd;
-  width:154px;
+.donutchart-text-label {
+  font-size: 9px;
 }
 
+body {
+  padding: 40px;
+  font-family: 'Roboto';
+  text-align: center;
+}
+
+input {
+  padding: 8px 10px;
+  border-radius: 4px;
+  border: 1px solid #ddd;
+  width: 154px;
+}
