--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,10 @@ body {
   font-family: sans-serif;
 }
 
-.container{
+.container {
+  padding: 50px 0 0 0;
   width: 33%;
   height: 700px;
   border: solid black 2px;
-  float:left;
+  float: left;
 }
