--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,27 @@
 body {
-  margin: 0;
+  margin: 100px;
   padding: 0;
   font-family: sans-serif;
+  background-color: rgb(63, 79, 104)
 }
 
 .container{
   width: 33%;
   height: 700px;
-  border: solid black 2px;
+  border: solid rgb(94, 12, 12) 2px;
   float:left;
+  background-color: rgb(180, 179, 179);
+  color: rgb(22, 22, 22);
+}
+.left-padding {
+  padding-top: 100px;
+}
+
+.center-padding {
+  padding-top: 200px;
+}
+
+.right-padding {
+  padding-top: 200px;
+  
 }
